add local data folder (for testing without Docker) to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# data folder for local use (should not be in repo as it comes from the other Docker image)
+shinyapp/data
+
 # History files
 .Rhistory
 .Rapp.history
