allow filtering for fahrspuren; filtering correct fahrspuren for most of the junctions; improve update of time-inputs; add info about junctions

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 # data folder for local use (should not be in repo as it comes from the other Docker image)
 shinyapp/data
+# folder for deployment of shinyapp to shinyapp.io
+shinyapp/rsconnect
+# logs for debugging local docker deployment
+logs/
 
 # History files
 .Rhistory
